// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyProjects component renders correctly MyProjects component render should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MuiThemeProvider>
    <MyProjects
      myProjects={
        Array [
          Object {
            "accessTimeAgo": "5 days ago",
            "bookAbbr": "1co",
            "bookName": "1 Corinthians",
            "isSelected": false,
            "projectName": "en_1co_ulb",
            "projectSaveLocation": "<TEMP_DIR>/en_1co_ulb",
            "target_language": Object {
              "id": "en",
              "name": "English",
            },
          },
          Object {
            "accessTimeAgo": "6 days ago",
            "bookAbbr": "tit",
            "bookName": "Titus",
            "isSelected": false,
            "projectName": "hi_tit",
            "projectSaveLocation": "<TEMP_DIR>/hi_tit",
            "target_language": Object {
              "id": "hi",
              "name": "Hindi",
            },
          },
        ]
      }
      onSelect={[Function]}
      translate={[Function]}
      user={
        Object {
          "username": "manny-test",
        }
      }
    />
  </MuiThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "myProjects": Array [
        Object {
          "accessTimeAgo": "5 days ago",
          "bookAbbr": "1co",
          "bookName": "1 Corinthians",
          "isSelected": false,
          "projectName": "en_1co_ulb",
          "projectSaveLocation": "<TEMP_DIR>/en_1co_ulb",
          "target_language": Object {
            "id": "en",
            "name": "English",
          },
        },
        Object {
          "accessTimeAgo": "6 days ago",
          "bookAbbr": "tit",
          "bookName": "Titus",
          "isSelected": false,
          "projectName": "hi_tit",
          "projectSaveLocation": "<TEMP_DIR>/hi_tit",
          "target_language": Object {
            "id": "hi",
            "name": "Hindi",
          },
        },
      ],
      "onSelect": [Function],
      "translate": [Function],
      "user": Object {
        "username": "manny-test",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "myProjects": Array [
          Object {
            "accessTimeAgo": "5 days ago",
            "bookAbbr": "1co",
            "bookName": "1 Corinthians",
            "isSelected": false,
            "projectName": "en_1co_ulb",
            "projectSaveLocation": "<TEMP_DIR>/en_1co_ulb",
            "target_language": Object {
              "id": "en",
              "name": "English",
            },
          },
          Object {
            "accessTimeAgo": "6 days ago",
            "bookAbbr": "tit",
            "bookName": "Titus",
            "isSelected": false,
            "projectName": "hi_tit",
            "projectSaveLocation": "<TEMP_DIR>/hi_tit",
            "target_language": Object {
              "id": "hi",
              "name": "Hindi",
            },
          },
        ],
        "onSelect": [Function],
        "translate": [Function],
        "user": Object {
          "username": "manny-test",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`MyProjects shows instruction if no projects MyProjects component render should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MuiThemeProvider>
    <MyProjects
      myProjects={Array []}
      onSelect={[Function]}
      translate={[Function]}
      user={
        Object {
          "username": "manny-test",
        }
      }
    />
  </MuiThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "myProjects": Array [],
      "onSelect": [Function],
      "translate": [Function],
      "user": Object {
        "username": "manny-test",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "myProjects": Array [],
        "onSelect": [Function],
        "translate": [Function],
        "user": Object {
          "username": "manny-test",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
